<resources>
    <string name="app_name">데일리실버</string>
    <string name="intro">소개</string>
    <string name="notice">공지사항</string>
    <string name="schedule">일정</string>
    <string name="gallery">갤러리</string>
    <string name="qa">Q/A</string>
    <string name="setting">Setting</string>

    <string name="registering_message_ready">InstanceID 토큰 가져오기</string>
    <string name="registering_message_generating">InstanceID 토큰 생성중...</string>
    <string name="registering_message_complete">완료!</string>
</resources>
