<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appproject="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_intro"
        android:title="@string/intro" />

    <item
        android:id="@+id/menu_notice"
        android:title="@string/notice" />
    <item
        android:id="@+id/menu_schedule"
        android:title="@string/schedule" />
    <item
        android:id="@+id/menu_gallery"
        android:title="@string/gallery" />
    <item
        android:id="@+id/menu_QA"
        android:title="@string/qa" />

    <item
        android:id="@+id/menu_adminPatient"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="AdminPatient"
        appproject:showAsAction="ifRoom"
        />
</menu>